# performance_prediction

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
config/: h20.yaml  ncu_metrics.yaml  test_tasks.yaml  train_benches.yaml
src/microbench/: main.cu  microbench.cu  microbench.h
src/tasks/: attention_like.cu  common.h  embedding_gather.cu  gemm.cu  layernorm.cu  main.cu  reduction.cu  softmax.cu  tasks.h
tools/: dataset_build.py  drift_probe.py  dvfs_nvml.py  features.py  ncu_profile.py  predict_eval.py  report.py  runner.py  train_xgb.py  utils.py
